tests/ui/pattern/usefulness/unstable-gated-patterns.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/unstable-gated-patterns.rs:10:11
   |
LL |     match UnstableEnum::Stable {
   |           ^^^^^^^^^^^^^^^^^^^^ pattern `UnstableEnum::Unstable` not covered
   |
   = note: the matched value is of type `UnstableEnum`
help: ensure that all possible cases are being handled by adding an arm to handle the `UnstableEnum::Unstable` case
   |
LL ~         UnstableEnum::Stable2 => {}
LL +         UnstableEnum::Unstable => { todo!() }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
