tests/ui/pattern/usefulness/unstable-gated-patterns.rs
#![feature(unstable_test_feature)]

// aux-build:unstable.rs

extern crate unstable;

use unstable::UnstableEnum;

fn main() {
    match UnstableEnum::Stable {
        UnstableEnum::Stable => {}
        UnstableEnum::Stable2 => {}
    }
    //~^^^^ match is non-exhaustive

    // Ok: all variants are explicitly matched
    match UnstableEnum::Stable {
        UnstableEnum::Stable => {}
        UnstableEnum::Stable2 => {}
        UnstableEnum::Unstable => {}
    }
}
